--- a/priv/rules/slice_of_life.yml
+++ b/priv/rules/slice_of_life.yml
@@ -27,7 +27,7 @@
   threshold: 155
   metadata:
     title_ru: Дзэн
-    text_ru: Предельная концентрация на будничной жизни. Когда вы перестали задумыватсья о прошлом, будущем и начали жить этим моментом?
+    text_ru: Предельная концентрация на будничной жизни. Когда вы перестали задумыватьcя о прошлом, будущем и начали жить этим моментом?
     image: /assets/achievements/anime/slice_of_life_3.png
     border_color: "#ddada5"
 
