--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1788,7 +1788,7 @@
   metadata: &190
     title_ru: Покемон
     title_en: Pokemon
-    image: https://kawai.shikimori.org/system/user_images/original/9560/744976.jpg
+    image: "/assets/achievements/anime/franchise/pokemon.jpg"
     topic_id: 247360
 - neko_id: pokemon
   level: 0
