--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -1,7 +1,7 @@
 ---
 - neko_id: hiroyuki_imaishi
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -71,7 +71,7 @@
     person_id: 2349
 - neko_id: tensai_okamura
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -135,7 +135,7 @@
     person_id: 2762
 - neko_id: yoshiaki_kawajiri
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -225,7 +225,7 @@
     person_id: 5812
 - neko_id: shinichiro_watanabe
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -268,7 +268,7 @@
     person_id: 2009
 - neko_id: makoto_shinkai
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -304,7 +304,7 @@
     person_id: 1117
 - neko_id: gen_urobuchi
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -342,7 +342,7 @@
     person_id: 10308
 - neko_id: hayao_miyazaki
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -421,7 +421,7 @@
     person_id: 1870
 - neko_id: key
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -458,7 +458,7 @@
     person_id: 2885
 - neko_id: mamoru_hosoda
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -503,7 +503,7 @@
     person_id: 5067
 - neko_id: clamp
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -571,7 +571,7 @@
     person_id: 1877
 - neko_id: kunihiko_ikuhara
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -604,7 +604,7 @@
     person_id: 5082
 - neko_id: hideaki_anno
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -674,7 +674,7 @@
     person_id: 5111
 - neko_id: type_moon
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -724,7 +724,7 @@
     person_id: 2582
 - neko_id: shoji_kawamori
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -817,7 +817,7 @@
     person_id: 2501
 - neko_id: kenji_nakamura
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -846,7 +846,7 @@
     person_id: 7217
 - neko_id: masaaki_yuasa
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -912,7 +912,7 @@
     person_id: 5068
 - neko_id: mamoru_oshii
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -961,7 +961,7 @@
     person_id: 4097
 - neko_id: isao_takahata
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1003,7 +1003,7 @@
     person_id: 5579
 - neko_id: kouji_morimoto
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1041,7 +1041,7 @@
     person_id: 5066
 - neko_id: kenji_kamiyama
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1079,7 +1079,7 @@
     person_id: 5348
 - neko_id: masamune_shirow
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1119,7 +1119,7 @@
     person_id: 2609
 - neko_id: shinji_aramaki
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1158,7 +1158,7 @@
     person_id: 7454
 - neko_id: satoshi_kon
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1186,7 +1186,7 @@
     person_id: 4580
 - neko_id: rintaro
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1267,7 +1267,7 @@
     person_id: 7305
 - neko_id: go_nagai
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1351,7 +1351,7 @@
     person_id: 2992
 - neko_id: osamu_tezuka
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1466,7 +1466,7 @@
     person_id: 1938
 - neko_id: kouichi_mashimo
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1522,7 +1522,7 @@
     person_id: 5094
 - neko_id: ryousuke_takahashi
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1590,7 +1590,7 @@
     person_id: 5957
 - neko_id: naoki_urasawa
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1610,7 +1610,7 @@
     person_id: 1867
 - neko_id: katsuhiro_otomo
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1642,7 +1642,7 @@
     person_id: 1872
 - neko_id: nobuo_uematsu
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1662,7 +1662,7 @@
     person_id: 5150
 - neko_id: yoshiyuki_tomino
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1772,7 +1772,7 @@
     person_id: 2337
 - neko_id: rumiko_takahashi
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1828,7 +1828,7 @@
     person_id: 1891
 - neko_id: yoshitaka_amano
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1870,7 +1870,7 @@
     person_id: 2967
 - neko_id: osamu_dezaki
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -1944,7 +1944,7 @@
     person_id: 5393
 - neko_id: kunihiko_yuyama
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2004,7 +2004,7 @@
     person_id: 5180
 - neko_id: leiji_matsumoto
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2067,7 +2067,7 @@
     person_id: 2597
 - neko_id: yoshikazu_yasuhiko
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2110,7 +2110,7 @@
     person_id: 2220
 - neko_id: tomoharu_katsumata
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2154,7 +2154,7 @@
     person_id: 6305
 - neko_id: shoutarou_ishinomori
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2200,7 +2200,7 @@
     person_id: 2478
 - neko_id: masami_kurumada
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2237,7 +2237,7 @@
     person_id: 1999
 - neko_id: satoshi_dezaki
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
@@ -2285,7 +2285,7 @@
     person_id: 16371
 - neko_id: mitsuteru_yokoyama
   level: 1
-  algo: duration
+  algo: count
   threshold: 100%
   filters:
     anime_ids:
