--- a/priv/rules/kuudere.yml
+++ b/priv/rules/kuudere.yml
@@ -359,7 +359,7 @@
       - 14353
   metadata:
     title_ru: Тишина
-    text_ru: Кудере молчит только потому, что того хочет.
+    text_ru: Кудере молчит только потому что того хочет.
     image: /assets/achievements/anime/kuudere_1.jpg
     border_color: "#9ad1ee"
     topic_id: 227421
