--- a/priv/rules/horror_thriller.yml
+++ b/priv/rules/horror_thriller.yml
@@ -9,7 +9,7 @@
       - 41
   metadata:
     title_ru: Смерть дышит в спину
-    text_ru: Практически всё в этом мире умирает. В этом мире жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
+    text_ru: Практически всё в этом мире умирает. Жизнь — всего лишь незначительная частичка, не более чем секундное явление. Смерть повсеместна.
     image: /assets/achievements/anime/horror_thriller_1.jpg
     border_color: "#821d60"
     topic_id: 227420
