--- a/priv/rules/military.yml
+++ b/priv/rules/military.yml
@@ -37,6 +37,6 @@
   metadata:
     title_ru: Генерал
     text_ru: |-
-      Запах напалма по утру вам нравится больше чем аниме.
+      Запах напалма поутру вам нравится больше, чем аниме.
     image: /assets/achievements/anime/military_4.gif
     border_color: "#2a456e"
