--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -38,5 +38,5 @@
   metadata:
     title_ru: Яойный бог
     text_ru: Яой — не жанр. Яой — это стиль жизни.
-    image: /assets/achievements/anime/fujoshi_4.jpg
-    border_color: "#e82a8d"
+    image: /assets/achievements/anime/fujoshi_4.gif
+    border_color: "#915274"
