--- a/priv/rules/otaku.yml
+++ b/priv/rules/otaku.yml
@@ -37,6 +37,6 @@
   threshold: 300
   metadata:
     title_ru: Хикикомори
-    text_ru: Уровень вашего либидо достиг максимального. Окружающие трепещут.
+    text_ru: Уровень вашего либидо достиг максимально возможного. Окружающие трепещут.
     image: /assets/achievements/anime/otaku_4.gif
     border_color: "#ff496c"
