--- a/priv/rules/fujoshi.yml
+++ b/priv/rules/fujoshi.yml
@@ -19,7 +19,7 @@
   threshold: 30%
   metadata:
     title_ru: Голубок
-    text_ru: 'Поворачивать назад уже слишком поздно. Пора совершить каминг-аут и наконец-то признать свою любовь к "не очень традиционным" историям.'
+    text_ru: Поворачивать назад уже слишком поздно. Пора совершить каминг-аут и наконец-то признать свою любовь к "не очень традиционным" историям.
     image: /assets/achievements/anime/fujoshi_2.png
     border_color: "#e82a8d"
 
