--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3723,3 +3723,25 @@
   filters: *401
   threshold: 0.01
   metadata: *402
+- neko_id: shingeki_no_bahamut
+  level: 1
+  algo: duration
+  filters: &401
+    franchise: shingeki_no_bahamut
+  threshold: 100%
+  metadata: &402
+    title_ru: Ярость Бахамута
+    title_en: Shingeki no Bahamut
+    image: 
+    topic_id: 247360
+ - neko_id: date_a_live
+  level: 1
+  algo: duration
+  filters: &401
+    franchise: date_a_live
+  threshold: 100%
+  metadata: &402
+    title_ru: Рандеву с жизнью
+    title_en: Date A Live
+    image: https://kawai.shikimori.org/system/user_images/original/12671/730761.jpg
+    topic_id: 247360
