--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3732,7 +3732,7 @@
   metadata: &402
     title_ru: Ярость Бахамута
     title_en: Shingeki no Bahamut
-    image: 
+    image: https://nyaa.shikimori.org/system/user_images/original/34807/764520.jpg
     topic_id: 247360
  - neko_id: date_a_live
   level: 1
