--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3728,22 +3728,36 @@
 - neko_id: shingeki_no_bahamut
   level: 1
   algo: duration
-  filters: &401
+  filters: &403
     franchise: shingeki_no_bahamut
+    not_anime_ids:
+    - 28447
   threshold: 100%
-  metadata: &402
+  metadata: &404
     title_ru: Ярость Бахамута
     title_en: Shingeki no Bahamut
-    image: https://nyaa.shikimori.org/system/user_images/original/34807/764520.jpg
+    image: "/assets/achievements/anime/franchise/shingeki_no_bahamut.jpg"
     topic_id: 247360
- - neko_id: date_a_live
+- neko_id: shingeki_no_bahamut
+  level: 0
+  algo: duration
+  filters: *403
+  threshold: 0.01
+  metadata: *404
+- neko_id: date_a_live
   level: 1
   algo: duration
-  filters: &401
+  filters: &405
     franchise: date_a_live
   threshold: 100%
-  metadata: &402
+  metadata: &406
     title_ru: Рандеву с жизнью
     title_en: Date A Live
-    image: https://kawai.shikimori.org/system/user_images/original/12671/730761.jpg
+    image: "/assets/achievements/anime/franchise/date_a_live.jpg"
     topic_id: 247360
+- neko_id: date_a_live
+  level: 0
+  algo: duration
+  filters: *405
+  threshold: 0.01
+  metadata: *406
