--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -1079,6 +1079,8 @@
   algo: duration
   filters: &115
     franchise: full_metal_panic
+    not_anime_ids:
+    - 38149
   threshold: 94.6%
   metadata: &116
     title_ru: Стальная тревога
