--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -499,6 +499,7 @@
     title_ru: Мамору Хосода
     title_en: Mamoru Hosoda
     image: https://nyaa.shikimori.one/system/user_images/original/50587/788830.jpg
+    border_color: "#314357"
     topic_id: 276032
   generator:
     person_id: 5067
@@ -1000,6 +1001,7 @@
     title_ru: Исао Такахата
     title_en: Isao Takahata
     image: https://dere.shikimori.one/system/user_images/original/50587/788829.jpg
+    border_color: "#4f5f53"
     topic_id: 276032
   generator:
     person_id: 5579
@@ -1786,6 +1788,7 @@
     title_ru: Румико Такахаси
     title_en: Rumiko Takahashi
     image: https://moe.shikimori.one/system/user_images/original/50587/788827.jpg
+    border_color: "#e3b288"
     topic_id: 276032
   generator:
     person_id: 1891
@@ -1966,6 +1969,7 @@
     title_ru: Лэйдзи Мацумото
     title_en: Leiji Matsumoto
     image: https://kawai.shikimori.one/system/user_images/original/50587/788831.jpg
+    border_color: "#e5ebe3"
     topic_id: 276032
   generator:
     person_id: 2597
