--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -529,45 +529,24 @@
     - 1078
     - 1496
     - 1563
-    - 1575
     - 1844
     - 1954
     - 2424
     - 2685
-    - 2727
-    - 2904
     - 3091
-    - 3863
-    - 4879
     - 4918
     - 4938
     - 5678
-    - 6736
     - 6864
-    - 8888
-    - 10098
     - 10490
     - 10681
-    - 12685
-    - 14117
-    - 15197
-    - 15199
-    - 15201
-    - 30711
     - 33354
-    - 33840
-    - 34437
-    - 34439
-    - 34440
-    - 35156
     - 35320
-    - 35416
-    - 36592
-    - 39032
   metadata:
     title_ru: CLAMP
     title_en: CLAMP
     image: "/assets/achievements/anime/author/clamp.jpg"
+    border_color: "#007276"
     topic_id: 276032
   generator:
     person_id: 1877
