--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -296,7 +296,6 @@
   filters:
     anime_ids:
     - 438
-    - 3407
     - 5682
     - 9756
     - 10087
@@ -307,13 +306,10 @@
     - 13391
     - 13601
     - 16524
-    - 19211
     - 21339
     - 22729
-    - 23281
     - 23319
     - 27655
-    - 28791
     - 29017
     - 30091
     - 32313
@@ -324,6 +320,7 @@
     title_ru: Гэн Уробути
     title_en: Gen Urobuchi
     image: "/assets/achievements/anime/author/gen_urobuchi.jpg"
+    border_color: "#F00100"
     topic_id: 276032
   generator:
     person_id: 10308
@@ -440,6 +437,7 @@
     title_ru: Key
     title_en: Key
     image: "/assets/achievements/anime/author/key.png"
+    border_color: "#000000"
     topic_id: 276032
   generator:
     person_id: 2885
@@ -449,39 +447,25 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 21
-    - 170
-    - 205
-    - 341
-    - 353
-    - 440
-    - 464
-    - 552
-    - 813
-    - 883
-    - 893
-    - 901
-    - 903
-    - 996
     - 1153
-    - 1240
-    - 1861
-    - 1946
-    - 2055
+    - 901
+    - 36936
+    - 28805
+    - 12355
+    - 5681
     - 2236
+    - 464
     - 2290
     - 2397
-    - 2498
-    - 2499
     - 2961
     - 3602
-    - 5681
-    - 8490
-    - 8493
-    - 8812
-    - 12355
-    - 28805
-    - 36936
+    - 893
+    - 1240
+    - 2499
+    - 2498
+    - 1861
+    - 883
+    - 903
   metadata:
     title_ru: Мамору Хосода
     title_en: Mamoru Hosoda
@@ -682,6 +666,18 @@
     - 33047
     - 34321
     - 34662
+    - 22763
+    - 31056
+    - 34100
+    - 33456
+    - 38958
+    - 38936
+    - 36914
+    - 36915
+    - 36833
+    - 37033
+    - 37651
+    - 169
   metadata:
     title_ru: Type-Moon
     title_en: Type-Moon
@@ -780,6 +776,8 @@
   metadata:
     title_ru: Сёдзи Кавамори
     title_en: Shoji Kawamori
+    image: https://desu.shikimori.one/system/user_images/original/3824/793818.jpg
+    border_color: "#6483B8"
     topic_id: 276032
   generator:
     person_id: 2501
