--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3784,3 +3784,20 @@
   filters: *405
   threshold: 0.01
   metadata: *406
+  - neko_id: saiki_kusuo_no_nan
+  level: 1
+  algo: duration
+  filters: &405
+    franchise: saiki_kusuo_no_nan
+  threshold: 100%
+  metadata: &406
+    title_ru: Ох уж этот экстрасенс Сайки Кусуо!
+    title_en: Saiki Kusuo no Ψ-nan
+    image: https://moe.shikimori.org/system/user_images/original/47216/799112.jpg
+    topic_id: 247360
+- neko_id: saiki_kusuo_no_nan
+  level: 0
+  algo: duration
+  filters: *405
+  threshold: 0.01
+  metadata: *406
