--- a/priv/rules/_franchises.yml
+++ b/priv/rules/_franchises.yml
@@ -3789,11 +3789,11 @@
   algo: duration
   filters: &407
     franchise: saiki_kusuo_no_nan
-  threshold: 100%
+  threshold: 95.9%
   metadata: &408
     title_ru: Ох уж этот экстрасенс Сайки Кусуо!
     title_en: Saiki Kusuo no Ψ-nan
-    image: https://moe.shikimori.one/system/user_images/original/47216/799112.jpg
+    image: "/assets/achievements/anime/franchise/saiki_kusuo_no_nan.jpg"
     topic_id: 247360
 - neko_id: saiki_kusuo_no_nan
   level: 0
