--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -229,12 +229,12 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 2053 
-    - 474 
-    - 1 
-    - 5 
-    - 1303 
-    - 3508 
+    - 2053
+    - 474
+    - 1
+    - 5
+    - 1303
+    - 3508
     - 205
     - 12531
     - 20057
@@ -242,8 +242,8 @@
     - 23283
     - 36308
     - 37435
-    - 875 
-    - 4087 
+    - 875
+    - 4087
     - 13203
   metadata:
     title_ru: Синъитиро Ватанабэ
@@ -367,7 +367,7 @@
   metadata:
     title_ru: Хаяо Миядзаки
     title_en: Hayao Miyazaki
-    image: https://nyaa.shikimori.one/system/user_images/original/34807/794630.jpg
+    image: "/assets/achievements/anime/author/hayao_miyazaki.jpg"
     border_color: "#C48D5E"
     topic_id: 276032
   generator:
@@ -438,7 +438,7 @@
   metadata:
     title_ru: Мамору Хосода
     title_en: Mamoru Hosoda
-    image: https://nyaa.shikimori.one/system/user_images/original/50587/788830.jpg
+    image: "/assets/achievements/anime/author/mamoru_hosoda.jpg"
     border_color: "#314357"
     topic_id: 276032
   generator:
@@ -508,7 +508,7 @@
   metadata:
     title_ru: Кунихико Икухара
     title_en: Kunihiko Ikuhara
-    image: https://desu.shikimori.one/system/user_images/original/34807/798103.jpg
+    image: "/assets/achievements/anime/author/kunihiko_ikuhara.jpg"
     border_color: "#EF795B"
     topic_id: 276032
   generator:
@@ -619,7 +619,7 @@
   metadata:
     title_ru: Type-Moon
     title_en: Type-Moon
-    image: https://desu.shikimori.one/system/user_images/original/3824/801573.jpg
+    image: "/assets/achievements/anime/author/type_moon.jpg"
     border_color: "#4285B4"
     topic_id: 276032
   generator:
@@ -714,7 +714,7 @@
   metadata:
     title_ru: Сёдзи Кавамори
     title_en: Shoji Kawamori
-    image: https://desu.shikimori.one/system/user_images/original/3824/793818.jpg
+    image: "/assets/achievements/anime/author/shoji_kawamori.jpg"
     border_color: "#6483B8"
     topic_id: 276032
   generator:
@@ -852,7 +852,7 @@
   metadata:
     title_ru: Исао Такахата
     title_en: Isao Takahata
-    image: https://dere.shikimori.one/system/user_images/original/50587/788829.jpg
+    image: "/assets/achievements/anime/author/isao_takahata.jpg"
     border_color: "#4f5f53"
     topic_id: 276032
   generator:
@@ -1622,7 +1622,7 @@
   metadata:
     title_ru: Румико Такахаси
     title_en: Rumiko Takahashi
-    image: https://moe.shikimori.one/system/user_images/original/50587/788827.jpg
+    image: "/assets/achievements/anime/author/rumiko_takahashi.jpg"
     border_color: "#e3b288"
     topic_id: 276032
   generator:
@@ -1703,7 +1703,7 @@
   metadata:
     title_ru: Осаму Дэдзаки
     title_en: Osamu Dezaki
-    image: https://moe.shikimori.one/system/user_images/original/34807/800072.jpg
+    image: "/assets/achievements/anime/author/osamu_dezaki.jpg"
     border_color: "#285F8D"
     topic_id: 276032
   generator:
@@ -1768,7 +1768,7 @@
   metadata:
     title_ru: Лэйдзи Мацумото
     title_en: Leiji Matsumoto
-    image: https://kawai.shikimori.one/system/user_images/original/50587/788831.jpg
+    image: "/assets/achievements/anime/author/leiji_matsumoto.jpg"
     border_color: "#e5ebe3"
     topic_id: 276032
   generator:
@@ -1998,8 +1998,8 @@
     - 36999
   metadata:
     title_ru: Акиюки Симбо
-    title_en: Akiyuki Shinbou 
-    image: https://shinbopedia.files.wordpress.com/2019/06/kyuubey-grin-2x1-500x250px.png
+    title_en: Akiyuki Shinbou
+    image: "/assets/achievements/anime/author/akiyuki_shinbou.png"
     border_color: "#ff0000"
     topic_id: 276032
   generator:
