--- a/priv/rules/_authors.yml
+++ b/priv/rules/_authors.yml
@@ -1230,77 +1230,67 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 151
-    - 305
-    - 938
-    - 978
-    - 1064
-    - 1227
-    - 1337
-    - 1341
-    - 1342
-    - 1343
-    - 1556
-    - 1628
-    - 1629
-    - 1641
-    - 1661
-    - 1759
-    - 1853
-    - 1985
-    - 2067
-    - 2157
-    - 2234
-    - 2252
-    - 2253
-    - 2354
-    - 2355
-    - 2356
-    - 2497
-    - 2525
-    - 2692
-    - 2734
-    - 2790
-    - 2978
-    - 3481
-    - 3579
-    - 3881
-    - 3898
-    - 3910
-    - 4042
-    - 4119
-    - 4198
-    - 4385
-    - 4386
-    - 4387
-    - 4388
-    - 4406
-    - 4486
-    - 5250
-    - 5292
-    - 5485
-    - 5563
-    - 5566
-    - 5620
-    - 5658
-    - 5907
-    - 6097
-    - 6428
-    - 6496
-    - 8666
-    - 9074
-    - 9493
-    - 12885
-    - 19799
-    - 24763
-    - 29035
-    - 30912
-    - 31050
-    - 31467
-    - 34820
     - 35120
     - 36976
-    - 37562
+    - 34820
+    - 31050
+    - 29035
+    - 24763
+    - 19799
+    - 30912
+    - 9493
+    - 8666
+    - 5485
+    - 2157
+    - 1556
+    - 151
+    - 2234
+    - 2978
+    - 2734
+    - 1628
+    - 1064
+    - 938
+    - 2356
+    - 1629
+    - 978
+    - 6496
+    - 1853
+    - 5566
+    - 6097
+    - 2497
+    - 1759
+    - 4042
+    - 2790
+    - 1641
+    - 3910
+    - 2525
+    - 305
+    - 2692
+    - 2355
+    - 1227
+    - 4119
+    - 2354
+    - 1342
+    - 1343
+    - 1341
+    - 5907
+    - 5250
+    - 6428
+    - 3481
+    - 4387
+    - 4198
+    - 1985
+    - 4386
+    - 5620
+    - 4486
+    - 4385
+    - 5658
+    - 4406
+    - 3579
+    - 1661
+    - 3898
+    - 2253
+    - 2252
   metadata:
     title_ru: Го Нагай
     title_en: Go Nagai
@@ -1314,53 +1304,45 @@
   threshold: 100%
   filters:
     anime_ids:
-    - 48
-    - 56
-    - 177
-    - 252
-    - 272
-    - 298
-    - 299
-    - 336
     - 424
-    - 454
-    - 495
-    - 569
-    - 771
-    - 808
-    - 873
-    - 969
-    - 1143
-    - 1151
-    - 1168
-    - 1409
-    - 1441
-    - 1487
-    - 1696
-    - 1704
-    - 1777
-    - 1796
-    - 2030
-    - 2543
-    - 2619
-    - 2620
-    - 2928
-    - 3915
-    - 4094
-    - 4151
-    - 4191
-    - 4940
-    - 5053
-    - 5581
-    - 5682
-    - 6055
-    - 6374
-    - 6867
-    - 7106
+    - 298
     - 9996
+    - 6867
+    - 5682
+    - 4151
+    - 2030
+    - 2928
+    - 873
+    - 2620
+    - 2619
+    - 969
+    - 177
+    - 336
+    - 252
+    - 454
+    - 1487
+    - 56
+    - 1143
+    - 299
+    - 48
+    - 272
+    - 4191
+    - 1704
+    - 808
+    - 495
+    - 1168
+    - 569
+    - 1777
+    - 2543
+    - 1151
+    - 6055
+    - 1796
+    - 5053
   metadata:
     title_ru: Коити Масимо
     title_en: Kouichi Mashimo
+    image: https://moe.shikimori.org/system/user_images/original/46976/807387.jpg
+    border_color: "#72633F"
     topic_id: 276032
   generator:
     person_id: 5094
